--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
 </head>
 
 <body>
     <div class="calculator">
-        <input type="text" class="calculator-screen">
+        <input type="text" class="calculator-screen" value="0" disabled>
         <div class="calculator-keys">
             <div class="row">
                 <button class="all-clear">AC</button>
-                <button class="operator" value="%">%</button>
+                <button class="percentage" value="%">%</button>
                 <button class="operator" value="/">&divide;</button>
             </div>
             <div class="row">
