Add script.js & modify style

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <body>
     <div class="calculator">
-        <input type="text" class="calculator-screen" value="0" disabled>
+        <div class="screen">
+            <input type="text" class="operator-screen" value="0" disabled>
+            <input type="text" class="calculator-screen" value="0" disabled>
+        </div>
         <div class="calculator-keys">
             <div class="row">
                 <button class="all-clear">AC</button>
-                <button class="percentage" value="%">%</button>
+                <button class="operator" value="%">&percnt;</button>
                 <button class="operator" value="/">&divide;</button>
             </div>
             <div class="row">
